force-app/main/default/objects/Servey_Questions__c/Servey_Questions__c.object-meta.xml
<CustomObject>
    <label>Servey Questions</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Servey Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>