force-app/main/default/objects/Servey_Questions__c/fields/OptionA__c.field-meta.xml
<CustomField>
    <fullName>OptionA__c</fullName>
    <label>Option A</label>
    <length>50</length>
    <type>Text</type>
</CustomField>