force-app/main/default/objects/Servey_Questions__c/fields/OptionB__c.field-meta.xml
<CustomField>
    <fullName>OptionB__c</fullName>
    <label>Option B</label>
    <length>50</length>
    <type>Text</type>
</CustomField>