force-app/main/default/objects/Servey_Questions__c/fields/OptionC__c.field-meta.xml
<CustomField>
    <fullName>OptionC__c</fullName>
    <label>Option C</label>
    <length>50</length>
    <type>Text</type>
</CustomField>