force-app/main/default/objects/Servey_Questions__c/fields/OptionD__c.field-meta.xml
<CustomField>
    <fullName>OptionD__c</fullName>
    <label>Option D</label>
    <length>50</length>
    <type>Text</type>
</CustomField>